# workUA

./: .env.example  .gitignore  ANTI_DETECTION.md  GITHUB_ACTIONS.md  README.md  REFACTORING_SUMMARY.md  SELECTORS.md  SUPABASE_SETUP.md  agent.py  anti_detection.py  bot.py  config.py  create_pdf.py  database.py  explorer.py  filter_example.txt  human_behavior.py  llm_service.py  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  resume_Osipov_Ernest.docx  resume_Osipov_Ernest.txt  scraper.py  start.ps1  supabase_schema.sql  test_apply.py  test_config.py  test_database.py  test_env_variables.py  test_human_behavior.py  test_llm_service.py  test_remote.py  test_utils.py  ui_selectors.py  utils.py  ІНСТРУКЦІЯ_ДЛЯ_КОРИСТУВАЧА.html  ІНСТРУКЦІЯ_ДЛЯ_КОРИСТУВАЧА.md  (+1 more)
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  test.yml  workua-bot-example.yml
