[project]
name = "workua-ai-agent"
version = "0.1.0"
description = "AI агент для автоматичної розсилки резюме на Work.ua"
authors = [
    {name = "Ernest"}
]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.41.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "beautifulsoup4>=4.12.3",
    "openai>=1.0.0",
    "playwright-stealth>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
llm = [
    "langgraph>=0.2.20",
    "langchain>=0.2.14",
    "langchain-openai>=0.1.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
